@@ -42,6 +42,7 @@ osd_lyrics_SOURCES = \
 	ol_trayicon.c \
 	ol_menu.c \
 	ol_lrc_fetch.c \
+	ol_lrc_fetch_module.c \
 	ol_lrc_fetch_ui.c \
 	ol_lrc_fetch_sogou.c \
 	ol_lrc_fetch_qianqian.c \
