@@ -6,7 +6,8 @@ check_PROGRAMS = \
 	ol_lrc_fetch_test \
 	ol_config_test \
 	ol_color_test \
-	ol_lrc_fetch_ui_test
+	ol_lrc_fetch_ui_test \
+	ol_lrc_fetch_module_test
 
 INCLUDES = @GTK2_CFLAGS@ \
 	@DBUS_GLIB_CFLAGS@ \
@@ -31,8 +32,10 @@ ol_player_test_SOURCES = ol_player_test.c \
 	$(top_srcdir)/src/ol_player_amarok2.c \
 	$(top_srcdir)/src/ol_player_banshee.c \
 	$(top_srcdir)/src/ol_player_mpris.c \
+	$(top_srcdir)/src/ol_player_exaile.c \
 	$(top_srcdir)/src/ol_player_audacious.c \
 	$(top_srcdir)/src/ol_player_rhythmbox.c \
+	$(top_srcdir)/src/ol_elapse_emulator.c \
 	$(top_srcdir)/src/ol_utils.c \
 	$(top_srcdir)/src/ol_utils_dbus.c \
 	$(top_srcdir)/src/ol_utils_dcop.c 
@@ -40,15 +43,13 @@ ol_player_test_LDADD = \
 	@GTK2_LIBS@ \
 	@DBUS_GLIB_LIBS@
 
-ol_lrc_parser_test_SOURCES = ol_lrc_parser_test.c
-ol_lrc_parser_test_LDADD = \
-	$(top_srcdir)/src/libol_lrc_parser.a \
-	$(top_srcdir)/src/libol_lrc_utility.a
+ol_lrc_parser_test_SOURCES = ol_lrc_parser_test.c \
+	$(top_srcdir)/src/ol_lrc_parser.c \
+	$(top_srcdir)/src/ol_lrc_utility.c
 
-ol_lrc_utility_test_SOURCES = ol_lrc_utility_test.c
-ol_lrc_utility_test_LDADD = \
-	$(top_srcdir)/src/libol_lrc_parser.a \
-	$(top_srcdir)/src/libol_lrc_utility.a
+ol_lrc_utility_test_SOURCES = ol_lrc_utility_test.c \
+	$(top_srcdir)/src/ol_lrc_parser.c \
+	$(top_srcdir)/src/ol_lrc_utility.c
 
 ol_lrc_fetch_test_SOURCES = ol_lrc_fetch_test.c \
 	$(top_srcdir)/src/ol_lrc_fetch.c \
@@ -84,5 +85,22 @@ ol_lrc_fetch_ui_test_SOURCES = ol_lrc_fetch_ui_test.c \
 ol_lrc_fetch_ui_test_LDADD = \
 	@CURL_LIBS@ \
 	@GTK2_LIBS@ \
+	@GLADE_LIBS@
+
+ol_lrc_fetch_module_test_SOURCES = ol_lrc_fetch_module_test.c \
+	$(top_srcdir)/src/ol_lrc_fetch.c \
+	$(top_srcdir)/src/ol_lrc_fetch_module.c \
+	$(top_srcdir)/src/ol_lrc_fetch_utils.c \
+	$(top_srcdir)/src/ol_lrc_fetch_sogou.c \
+	$(top_srcdir)/src/ol_lrc_fetch_qianqian.c \
+	$(top_srcdir)/src/ol_utils.c \
+	$(top_srcdir)/src/ol_lrc_fetch_ui.c \
+	$(top_srcdir)/src/ol_music_info.c \
+	$(top_srcdir)/src/ol_glade.c 
+
+ol_lrc_fetch_module_test_LDADD = \
+	@CURL_LIBS@ \
+	@GTK2_LIBS@ \
+	@DBUS_GLIB_LIBS@ \
 	@GLADE_LIBS@
 
